# hrss

./: LICENSE  README.md  spec.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/me/heftymouse/hrss/: MainActivity.kt
android/app/src/main/java/me/heftymouse/hrss/ui/dashboard/: DashboardFragment.kt  DashboardViewModel.kt
android/app/src/main/java/me/heftymouse/hrss/ui/home/: HomeFragment.kt  HomeViewModel.kt
android/app/src/main/java/me/heftymouse/hrss/ui/notifications/: NotificationsFragment.kt  NotificationsViewModel.kt
android/app/src/main/java/me/heftymouse/hrss/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/navigation/: mobile_navigation.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs
server/src/db/: mod.rs
server/src/models/: mod.rs
server/src/util/: feed.rs  mod.rs
