[package]
name = "hrss-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.11.3"
serde_json = "1.0"
feed-rs = "2.0.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }